@@ -224,6 +224,7 @@ fostlib::http::server::request::request(
         m_mime( headers_and_body.get()
             ? headers_and_body.release()
             : new binary_body() ) {
+    m_mime->headers().add("__remote_addr", "127.0.0.1");
 }
 fostlib::http::server::request::request(
     const string &method,
@@ -235,6 +236,7 @@ fostlib::http::server::request::request(
         m_mime( headers_and_body.get()
             ? headers_and_body.release()
             : new binary_body() ) {
+    m_mime->headers().add("__remote_addr", "127.0.0.1");
 }
 
 fostlib::http::server::request::request(
@@ -244,6 +246,14 @@ fostlib::http::server::request::request(
 ) : m_handler(handler),
         m_method( method ), m_pathspec( filespec ),
         m_mime( headers_and_body.release() ) {
+    m_mime->headers().add("__remote_addr", "127.0.0.1");
+}
+
+
+fostlib::host fostlib::http::server::request::remote_address() const {
+    static const setting<string> header("fost-internet/Cpp/fost-inet/http.server.cpp",
+        "webserver", "Remote address header", "__remote_addr", true);
+    return host(m_mime->headers()[header.value()].value());
 }
 
 
